fix header align 2

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ header {
     top: 0;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: white;
     z-index: 2;
 }
